--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,7 +15,7 @@
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Slideshow"
-            android:visible="false" />
+            android:visible="true" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
