--- a/app/src/main/res/layout/item_raw.xml
+++ b/app/src/main/res/layout/item_raw.xml
@@ -16,23 +16,23 @@
             android:id="@+id/ic_row_place"
             android:layout_width="48dp"
             android:layout_height="54dp"
-            android:paddingLeft="-8dp"
-            card_view:srcCompat="@drawable/ic_action_places"
             android:layout_above="@+id/rvzonaID"
             android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/separaV" />
+            android:layout_toEndOf="@+id/separaV"
+            android:paddingLeft="-8dp"
+            card_view:srcCompat="@drawable/ic_action_places" />
 
         <TextView
             android:id="@+id/rvzonaID"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:layout_below="@+id/tableLayout"
-            android:layout_marginBottom="4dp"
-            android:layout_marginEnd="4dp"
             android:layout_marginLeft="4dp"
             android:layout_toEndOf="@+id/separaH"
             android:background="#f1f1f1"
+            android:gravity="left|center"
             android:paddingStart="4dp"
+            android:text="ZONA"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -45,7 +45,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
-            android:background="@android:color/holo_red_dark" />
+            android:background="@color/common_google_signin_btn_text_dark_disabled" />
 
         <TextView
             android:id="@+id/separaH"
@@ -75,7 +75,9 @@
                     android:textColor="@android:color/black" />
             </TableRow>
 
-            <TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/rvname"
@@ -85,7 +87,9 @@
             </TableRow>
 
 
-            <TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/rvaddress"
@@ -95,7 +99,9 @@
             </TableRow>
 
 
-            <TableRow>
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
                 <TextView
                     android:id="@+id/rvcoordinate"
