--- a/app/src/main/res/layout/item_raw_material.xml
+++ b/app/src/main/res/layout/item_raw_material.xml
@@ -12,13 +12,13 @@
         android:id="@+id/image_bg"
 
         android:layout_width="fill_parent"
-        android:layout_height="142dp"
+        android:layout_height="72dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:scaleType="centerCrop"
+        android:background="@drawable/default_cover4"
 
-        />
+        android:scaleType="centerCrop" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -28,10 +28,10 @@
             android:id="@+id/ic_row_place"
             android:layout_width="36dp"
             android:layout_height="72dp"
+            android:paddingBottom="12dp"
+            card_view:srcCompat="@drawable/ic_action_places"
             android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/separaV"
-            android:paddingBottom="32dp"
-            card_view:srcCompat="@drawable/ic_action_places" />
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:id="@+id/rvzonaID"
