nuova recycled view
nuova recycled view

--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -20,7 +20,7 @@
         android:layout_alignBottom="@+id/lg_zonaID"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/lg_textgeo"
-        app:srcCompat="@drawable/ic_place_in" />
+        app:srcCompat="@drawable/ic_place_in_v" />
 
     <Switch
         android:id="@+id/lg_switch"
