--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -25,6 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/toolbar"
+            android:clipToPadding="false"
+            android:paddingBottom="80dp"
             android:scrollbars="vertical">
 
         </android.support.v7.widget.RecyclerView>
