--- a/app/src/main/res/layout/placepicker.xml
+++ b/app/src/main/res/layout/placepicker.xml
@@ -7,13 +7,14 @@
     tools:context="net.eclissi.lucasop.ioboss.PlacePickerActivity">
 
 
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/pickerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
+
+        android:layout_marginTop="16dp"
         app:srcCompat="@android:drawable/ic_dialog_map" />
 
     <include layout="@layout/content_main" />
