item view change color
modificato il colore dei caratteri

--- a/app/src/main/res/layout/item_raw_c.xml
+++ b/app/src/main/res/layout/item_raw_c.xml
@@ -171,10 +171,10 @@
     <View
         android:layout_width="0dp"
         android:layout_height="1dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
         android:layout_marginTop="8dp"
-        android:background="#80000000"
+        android:background="@android:color/darker_gray"
         card_view:layout_constraintHorizontal_bias="0.0"
         card_view:layout_constraintLeft_toLeftOf="parent"
         card_view:layout_constraintRight_toRightOf="parent"
