--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="light_red">#d28a8a</color>
     <color name="swipebg">#cc3333</color>
     <color name="mygrey">#f1f1f1</color>
+    <color name="colorTransBg">#60000000</color>
 
 </resources>
