--- a/app/src/main/res/layout/placepicker_f.xml
+++ b/app/src/main/res/layout/placepicker_f.xml
@@ -29,7 +29,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Place"/>
+            android:background="@drawable/rounded_corner"
+            android:text="Place" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/pickerButton"
@@ -56,7 +57,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FabTitle2"/>
+            android:background= "@drawable/rounded_corner"
+            android:text="FabTitle2" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab2"
@@ -83,7 +85,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FabTitle3"/>
+            android:background="@drawable/rounded_corner"
+            android:text="FabTitle3" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab3"
