--- a/app/src/main/res/menu/pop_up_recycledview.xml
+++ b/app/src/main/res/menu/pop_up_recycledview.xml
@@ -6,7 +6,8 @@
     <item
         android:id="@+id/cvedit"
         android:icon="@android:drawable/ic_menu_edit"
-        android:title="edit"
+        android:title="Edit"
+        app:showAsAction="ifRoom|withText" />
 
     <item
         android:id="@+id/cvshare"
